--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^7.3.0",
+    "dateformat": "^3.0.3",
     "ical.js": "^1.3.0"
   },
   "devDependencies": {
